[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["cargo"] }
flate2 = "1.0.26"
lazy_static = "1.4.0"
postscript = { path = "postscript" }


[lib]
path = "src/lib.rs"


[[bin]]
name = "main"
path = "src/main.rs"
